# Personal-Finance-agent

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: agent.py  config.py  db.py  main.py  parser.py
backend/tests/: test_agent.py
frontend/: package-lock.json  package.json
frontend/src/app/: api.ts  globals.css  layout.tsx  page.tsx
supabase/: schema.sql
test_statements/: statement_june_2026.csv
