[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "langgraph>=1.2.6",
    "openai>=2.43.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.13.3",
    "pytest>=9.1.1",
    "python-multipart>=0.0.32",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
